fixed visibility bug on mobile-view

--- a/frontend/src/components/nav/style.css
+++ b/frontend/src/components/nav/style.css
@@ -63,13 +63,13 @@ nav{
   }
 }
 
-
-
 @media(max-width: 768px){
   nav{
-    > ul{
-      > .dropdown, >a{
-        display: none
+    .nav-container{
+      > ul{
+        .dropdown, >a{
+          display: none
+        }
       }
     }
   }
